favicon added,readme updated

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git Time Machine</title>
+    <link rel="icon" type="image/svg+xml" href="./images/logo.svg" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -27,7 +28,14 @@
 
     <div id="app">
       <header>
-        <h1><span style="color:#e84d31;">Git</span> Time Machine</h1>
+        <div class="title-container">
+          <img
+            src="./images/logo.png"
+            alt="Git Time Machine Logo"
+            class="app-logo"
+          />
+          <h1><span style="color: #e84d31">Git</span> Time Machine</h1>
+        </div>
         <div id="repo-info"></div>
       </header>
 
