fixed logo issue

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -33,8 +33,10 @@
             src="./images/logo.png"
             alt="Git Time Machine Logo"
             class="app-logo"
+            width="40"
+            height="40"
           />
-          <h1><span style="color: #e84d31">Git</span> Time Machine</h1>
+          <h1><span style="color: #e84d31">Git</span>&nbsp;Time Machine</h1>
         </div>
         <div id="repo-info"></div>
       </header>
